--- a/style2.css
+++ b/style2.css
@@ -16,7 +16,7 @@
 /**************************/
 #parallax-world-of-ugg h1 {font-family:'Oswald', sans-serif; font-size:24px; font-weight:400; text-transform: uppercase; color:black; padding:0; margin:0;}
 #parallax-world-of-ugg h2 {font-family:'Oswald', sans-serif; font-size:70px; letter-spacing:10px; text-align:center; color:white; font-weight:400; text-transform:uppercase; z-index:10; opacity:.9;}
-#parallax-world-of-ugg h3 {font-family:'Oswald', sans-serif; font-size:14px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black;}
+/* #parallax-world-of-ugg h3 {font-family:'Oswald', sans-serif; font-size:14px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black;} */
 #parallax-world-of-ugg p {font-family:'robot, sans serif'; font-weight:500; font-size:20px; line-height:30px;}
 #parallax-world-of-ugg a {font-family:'Oswald', sans-serif; font-weight:400; font-size:20px; line-height:30px; text-decoration: none;text-align: center;}
 .first-character {font-weight:400; float: left; font-size: 80px; line-height: 64px; padding-top: 2px; padding-right: 8px; padding-left: 3px; font-family: 'Source Sans Pro', sans-serif;}
@@ -39,6 +39,7 @@
 /**************************/
 #parallax-world-of-ugg .parallax-one {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(https://images.unsplash.com/photo-1415018255745-0ec3f7aee47b?dpr=1&auto=format&fit=crop&w=1500&h=938&q=80&cs=tinysrgb&crop=); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: top center;}
 #parallax-world-of-ugg .parallax-two {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(./image/fond\ mer.png),url(./image/tortue2.png); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
+#parallax-world-of-ugg .parallax-three {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(./image/fond\ de\ mer2.jpg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
 
 
 
@@ -60,6 +61,122 @@
   #parallax-world-of-ugg .block {padding: 30px 15px; width:290px;}
   /* *************************************************/
 }
+/* "####################################################### */
+.content{
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.content .box{
+  position: relative;
+  max-width: 600px;
+  background-color: #696969;
+  padding: 10px;
+}
+#glow_box {
+display: inline-block;
+width: 500px;
+height: 0px;
+position: absolute;
+top: calc(0.1% - 2px);
+left: calc(1% - 5px);
+font-family: "Droid Sans", sans-serif;
+font-weight: 700;
+font-size:2vw; 
+line-height: 50px; 
+text-align: left;
+vertical-align: middle;
+}
+
+.glow_text {
+position: relative;
+background: transparent;
+color: #cccf1a;
+font-variant: small-caps;
+letter-spacing: 0.05em;
+-o-text-overflow: clip;
+text-overflow: clip;
+text-shadow: none;
+
+transition: all 0.6s linear; /* vendorless fallback */
+-o-transition: all 0.6s linear; /* opera */
+-ms-transition: all 0.6s linear; /* IE 10 */
+-moz-transition: all 0.6s linear; /* Firefox */
+-webkit-transition: all 0.6s linear; /*safari and chrome */
+}
+
+.glow_text:hover {
+
+text-shadow:
+  0 0 5px rgb(255, 255, 255, 1),
+  0 0 10px rgb(255, 255, 255, 1),
+  0 0 20px rgb(255, 255, 255, 1),
+  0 0 30px rgb(255, 255, 255, 1);
+}
+
+p.glow_text span.inner {
+position: relative;
+z-index: 2;
+}
+
+#glow_box p.glow_text span.inner {
+position: relative;
+content: '';
+z-index: 2;
+}
+#glow_box:hover p.glow_text span.inner {
+display: none;
+}
+#glow_box:hover p.glow_text:after {
+position: relative;
+content: "Je crée des interfaces web dynamiques avec passion et précision.";
+z-index: 2;
+color: #111;
+}
+
+
+
+.content .box span{
+  color:rgb(192,192,192);
+  margin-top: 0.1rem;
+}
+.box-img{
+  width: 400px;
+  display: flex;
+  padding-right: 10px;
+  justify-content: flex-end;
+}
+.box-img img{
+  width: 100%;
+  max-width: 500px;
+  height: auto;
+}
+.cont-imgs{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 40px;
+  display: flex;
+  list-style: none;
+
+}
+.cont-imgs li{
+  display: inline-block;
+  margin: 0 50px;
+  cursor: pointer;
+  transition: transform 0.5s ease-in-out;
+}
+.cont-imgs li:hover{
+  transform: translateY(-10px);
+}
+.cont-imgs img{
+  width: 100%;
+  max-width: 45px;
+}
+/* ################################################### */
 .block{
   display: flex;
   flex-direction: row;
