--- a/style.css
+++ b/style.css
@@ -32,8 +32,15 @@ body{
 	margin: 1rem 0 ;
 }
 .nav-principal{
-	
-	transition: opacity 0.4s ease;
+	/* display: none; */
+	opacity: 0;
+	visibility: hidden;
+	transition: opacity 0.5s ease, visibility 1s linear;
+}
+.nav-principal.hidden{
+	opacity: 1;
+	visibility: visible;
+	transition: opacity 1s ease, visibility 1s linear 0.5s;
 }
 .nav-principal a{
 	font-size: 25px;
@@ -293,9 +300,14 @@ body{
 	padding: center;
 	font-size: 100%;
     text-align: center;
-	/* opacity: 1; */
-	transition: opacity 0.4s ease;
+	display: block;
     
+}
+.prest.hidden{
+	opacity: 0;
+	visibility: hidden;
+	transition: opacity 0.8s ease, visibility 1s linear;
+	/* display: none; */
 }
 .prest span{
 	
