--- a/style2.css
+++ b/style2.css
@@ -3,6 +3,65 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);
 
 
+/* ##################nav ###############################"*/
+*,::before,::after{
+	margin: 0;
+	padding: 0;
+}
+body{
+    --primary:#000;
+    --secondar:#000;
+    --third:gray;
+	width: 100%;
+	height: 100vh;
+  position: relative;
+	font-size: 16px;
+
+
+
+.burger{
+	height: 50px;
+	width: 50px;
+	background:transparent;
+	margin: 1% 95% 0%;
+	position: relative;
+	
+	
+}
+.burger-ligne{
+	width: 40PX;
+	height: 5px;
+	top: 50%;
+	left: 10%;
+	border-radius: 5px;
+	background: var(--primary);
+	position: absolute;
+	cursor: pointer;
+	transition:top 0.5s ease-in-out,
+				transform 0.5s ease-in-out,
+				opacity 0.5s ease-in-out;
+}
+
+.burger-ligne:nth-child(1){
+	top: 15px;
+}
+
+.burger-ligne:nth-child(2){
+	top: 25px;
+}
+.burger-ligne:nth-child(2){
+	top: 35px;
+}
+
+
+
+
+
+
+
+
+
+
 #main {width: 100%; padding:0;}
 .content-asset p {margin:0 auto;}
 .breadcrumb {display:none;}
@@ -286,3 +345,6 @@ button:hover i::after {
     box-shadow: #27272c;
   }
 }
+
+
+
