--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ body{
 	position: absolute;
 	width: 100%;
 	height: auto;
-	top: 200px;
+	top: 50%;
 	left: 50%;
-	transform: translateX(-50%);
+	transform: translate(-50%,-50%);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -47,7 +47,6 @@ body{
 .nav-principal a{
 	font-size: 25px;
 	position: relative;
-	right: 50%;
 	padding: 1rem;
 	text-decoration: none;
 	color: var(--secondar);
